feat(airlines): add `airlines` segment WIP
