# docs/swagger.yaml
@@ -34,16 +34,18 @@ paths:
                     description: Which config is the API using.
   /booking:
     post:
-      summary: Create booking
+      summary: Create booking. Schema to be used depends on WT_SEGMENT this instance is run with.
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Booking'
+              oneOf:
+                - $ref: '#/components/schemas/HotelBooking'
+                - $ref: '#/components/schemas/AirlineBooking'
       responses:
         200:
-          description: Booking was successfuly processed by the hotel
+          description: Booking was successfuly processed
           content:
             application/json:
               schema:
@@ -57,7 +59,7 @@ paths:
                   status:
                     description: |
                       Status of the created booking. Can be one of the following:
-                        - `pending` - Hotel system has accepted the
+                        - `pending` - The system has accepted the
                           booking request and saved it to be
                           confirmed or rejected later on. The
                           customer can be notified about the
@@ -69,6 +71,10 @@ paths:
                     enum:
                       - pending
                       - confirmed
+                  finalizationUrl:
+                    description: URL where the booking can be finalized (e.g. by payment).
+                    type: string
+                    format: uri
         400:
           $ref: '#/components/responses/BadRequestError'
         409:
@@ -145,10 +151,10 @@ components:
             $ref: '#/components/schemas/Error'
   schemas:
     BookingId:
-      description: Hotel reference for this particular booking.
+      description: Reference ID for this particular booking.
       type: string
       maxLength: 255
-    Booking:
+    HotelBooking:
       description: Booking object passed from a customer to a hotel
       type: object
       required:
@@ -165,47 +171,13 @@ components:
         hotelId:
           $ref: https://raw.githubusercontent.com/windingtree/wiki/1b7bd3e03f88fdfce6d2f0cf27059caf889eb036/hotel-data-swagger.yaml#/components/schemas/EthereumAddressType
         booking:
-          $ref: '#/components/schemas/BookingInfo'
+          $ref: '#/components/schemas/HotelBookingInfo'
         pricing:
-          type: object
-          required:
-            - currency
-            - total
-            - cancellationFees
-          properties:
-            currency:
-              $ref: 'https://raw.githubusercontent.com/windingtree/wiki/1b7bd3e03f88fdfce6d2f0cf27059caf889eb036/hotel-data-swagger.yaml#/components/schemas/CurrencyType'
-            total:
-              description: Total price that should be paid. Including taxes - this is subject to change in the future.
-              type: number
-              format: float
-            # amenities
-            cancellationFees:
-              description: Under what conditions can this booking be cancelled and how much will it cost. Note that the cancellation fees should cover the whole period between the moment of booking and arrival and should be based on the hotel's cancellation policy. (Each cancellation fee should correspond to an applicable cancellation policy.)
-              type: array
-              items:
-                type: object
-                required:
-                  - from
-                  - to
-                  - amount
-                properties:
-                  from:
-                    description: After which date does this cancellation fee apply (inclusive).
-                    type: string
-                    format: date
-                  to:
-                    description: Until which date does this cancellation policy apply (inclusive).
-                    type: string
-                    format: date
-                  amount:
-                    description: Cost of cancellation in percents of the final price, 100 means non refundable. This means how much money will the hotel keep.
-                    type: number
-                    format: float
+          $ref: '#/components/schemas/Pricing'
         # billing: TBD (cash on arrival, card on arrival, online payment, crypto)
         # guarantee: TBD (can be for example credit card info)
     Customer:
-      description: Person responsible for this booking who should be contacted by the hotel if needed
+      description: Person responsible for this booking who should be contacted by the hotel/airline supplier if needed
       type: object
       required:
         - name
@@ -243,7 +215,47 @@ components:
           items:
             description: Which guests will be staying in this room? The strings should be id fields from guestInfo, so we can match the guests and their additional information when needed.
             type: string
-    BookingInfo:
+    Pricing:
+      type: object
+      required:
+        - currency
+        - total
+        - cancellationFees
+      properties:
+        currency:
+          $ref: 'https://raw.githubusercontent.com/windingtree/wiki/1b7bd3e03f88fdfce6d2f0cf27059caf889eb036/hotel-data-swagger.yaml#/components/schemas/CurrencyType'
+        total:
+          description: Total price that should be paid. Including taxes - this is subject to change in the future.
+          type: number
+          format: float
+        # amenities
+        cancellationFees:
+          description: >-
+            Under what conditions can this booking be cancelled and how much will it cost.
+            Note that the cancellation fees should cover the whole period from the moment of booking up to
+            service usage (hotel arrival or flight departure) and should be based on the supplier's cancellation policy.
+            (Each cancellation fee should correspond to an applicable cancellation policy.)
+          type: array
+          items:
+            type: object
+            required:
+              - from
+              - to
+              - amount
+            properties:
+              from:
+                description: After which date does this cancellation fee apply (inclusive).
+                type: string
+                format: date
+              to:
+                description: Until which date does this cancellation policy apply (inclusive).
+                type: string
+                format: date
+              amount:
+                description: Cost of cancellation in percents of the final price, 100 means non refundable. This means how much money will the hotel keep.
+                type: number
+                format: float
+    HotelBookingInfo:
       description: Information on the booked property
       type: object
       required:
@@ -283,6 +295,75 @@ components:
           description: List of rooms that form this booking. If a single room type is booked more than once, it shall be present more than once.
           items:
             $ref: '#/components/schemas/Room'
+    AirlineBooking:
+      description: Booking object passed from a customer to an airline supplier
+      type: object
+      required:
+        - customer
+        - airlineId
+        - booking
+        - pricing
+      properties:
+        customer:
+          $ref: '#/components/schemas/Customer'
+        note:
+          description: Additional information passed to an airline from a customer
+          type: string
+        airlineId:
+          $ref: https://raw.githubusercontent.com/windingtree/wiki/1b7bd3e03f88fdfce6d2f0cf27059caf889eb036/hotel-data-swagger.yaml#/components/schemas/EthereumAddressType
+        booking:
+          $ref: '#/components/schemas/AirlineBookingInfo'
+        pricing:
+          $ref: '#/components/schemas/Pricing'
+        # billing: TBD (cash on arrival, card on arrival, online payment, crypto)
+        # guarantee: TBD (can be for example credit card info)
+    AirlineBookingInfo:
+      description: Information on the booked seats.
+      type: object
+      required:
+        - flightNumber
+        - flightId
+        - bookingClasses
+      properties:
+        flightNumber:
+          description: Number of the booked flight.
+          type: string
+          minLength: 3
+          maxLength: 7
+        flightId:
+          description: ID of the booked flight.
+          type: string
+          maxLength: 255
+        bookingClasses:
+          type: array
+          items:
+            type: object
+            required:
+              - bookingClassId
+              - passengers
+            properties:
+              bookingClassId:
+                type: string
+              passengers:
+                type: array
+                description: |
+                  List of passengers. The length of the list
+                  corresponds to the number of seats booked for
+                  this class.
+                minItems: 1
+                items:
+                  $ref: '#/components/schemas/Passenger'
+    Passenger:
+      description: Passenger information.
+      type: object
+      required:
+        - name
+        - surname
+      properties:
+        name:
+          type: string
+        surname:
+          type: string
 
     Error:
       title: Error
